switch to canvas, change interactivity to filter eq rather than adjust playrate, and fix loading on ios

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -1,6 +1,10 @@
 // bower:scss
 // endbower
 
+html, body {
+  overflow: hidden;
+}
+
 body {
   background: #fafafa;
   font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
@@ -18,7 +22,7 @@ body {
     font-weight: 200;
   }
 
-  section {
+  section, canvas {
     display: flex;
     flex-basis: auto;
     flex-grow: 1;
@@ -26,6 +30,7 @@ body {
     top: 0;
     z-index: -1;
     height: 100vh;
+    width: 100vw;
 
     div {
       display: inline-block;
